        ___  _____ ____
__   __/ _ \|___  | ___|
\ \ / / | | |  / /|___ \          (unamed)
 \ V /| |_| | / /  ___) |
  \_/  \___(_)_/  |____/          (unreleased)

TexInfo:
 * Partial support of @documentencoding (hardcoded to the english value) and
   @documentlanguage (to be manually translated by the humans in the PO file)
   (GitHub's #597 and #598) [Fat-Zer, vindicatorr and mquinson]

Documentation:
 * Fix some typos [Rafael Fontenelle]

Translations:
 * Updated: Italian, thanks Marco Ciampa.
 * Updated: Tamil, thanks தமிழ்நேரம்.

=======================================================================
        ___  _____ _  _
__   __/ _ \|___  | || |
\ \ / / | | |  / /| || |_         The Simone Weil release.
 \ V /| |_| | / / |__   _|
  \_/  \___(_)_/     |_|          July 12. 2025.

Simone Weil was a a French philosopher whose ideas continue to inspire me.

General:
 * Fix a failure with Perl 5.40.
 * Add --target-lang option to po4a [jnavila]
 * Include bash_completion files (GitHub's #542) [Fat-Zer]
   Copy the share/bash-completion/completions/ files under /usr to use them.

Scripts:
 * po4a-updatepo: remove --width as no localized file will ever be
   generated (GitHub's #549) [Mt].

Asciidoc:
 * Manage custom verbatim styles (Github's #548) [Jean-Noël Avila]

Markdown:
 * Avoid searching for bullets in code blocks (GitHub's #550)
   [Alexander Golubev].
 * Ensure the parser avoids infinite loops, even when a document ends with an
   incorrect number of backticks, leaving a code block incomplete (GitHub's
   #558 and #560) [reported by Jibec, and fixed by gemmaro].

Org:
 * New module (GitHub's #485) [gemmaro].

Pod:
 * Add an announcement warning to the Pod module. (GitHub's #573) [gemmaro].
   It is based on a deprecated Perl module that will disappear at some point.

SimplePod:
 * New module (GitHub's #573), meant as a drop-in to the deprecated Pod [gemmaro].
   We think that it is production-ready, even if it was never tested