@@ -1,8 +1,14 @@
 <!-- po4a used to choke on '<video controls' tag, reporting Bad attribute syntax -->
 <!-- See also https://github.com/mquinson/po4a/issues/178 -->
+<!-- It also fails on '<script defer>' as sole argument, reporting the same thing -->
+<!-- See https://github.com/mquinson/po4a/issues/608 for this one -->
+
+
+
 
 
 <?xml version='1.0' encoding="UTF-8"?>
 <doc>
   <video controls text="some text to translate"/>
+  <script defer></script>
 </doc>
