@@ -14,6 +14,10 @@ TexInfo:
    @documentlanguage (to be manually translated by the humans in the PO file)
    (GitHub's #597 and #598) [Fat-Zer, vindicatorr and mquinson]
 
+XML:
+ * Accept boolean attibutes even if they are the only attribute of their tag
+   (GitHub's #608) [mquinson]
+
 Documentation:
  * Fix some typos [Rafael Fontenelle]
 
